# ml-project-foundation

./: .dockerignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/inference/: new_employees.csv  predictions.csv
data/raw/: employee_attrition_performance.csv
docker/: dockerfile
mlflow/artifacts/1/models/m-262eb9e8dda74fe0b06b4bafdc0a9c90/artifacts/: MLmodel  conda.yaml  requirements.txt
mlflow/backend/: mlflow.db
notebooks/: EDA.ipynb
scripts/: make_inference_data.py  predict.py  train.py
src/app/api/: main.py  schemas.py
src/app/data/: preprocessing.py
src/app/inference/: Predictor.py
src/app/models/: classifier.py
src/app/training/: evaluate.py  train.py
src/ml_project_foundation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_imports.py
